Fixed footer portrait alignment on mobile; added button to coursera page

--- a/src/bootstrap/less/theme/theme.less
+++ b/src/bootstrap/less/theme/theme.less
@@ -244,8 +244,7 @@ footer {
     .footer-portrait-container {
       float: left;
       @media (max-width: @screen-sm-max)  {
-        display: inline-block;
-        float: none;
+         float: none;
       }
     }
 
